<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:background="@color/white"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="97dp"
            android:layout_height="37dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="31dp"
            android:text="@string/text_sign_up"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="35dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_email_address" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="200dp"
                android:layout_height="34dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvEmailError"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/text_enter_valid_email"
                android:textColor="@color/error"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llEmail">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="200dp"
                android:layout_height="34dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_password_must_be_between_8_24"
                android:textColor="@color/error"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/text_forgot_password"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text_remember_me"
            app:layout_constraintStart_toStartOf="@+id/llPassword"
            app:layout_constraintTop_toBottomOf="@+id/llPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/button"
            android:text="@string/text_sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="33dp"
            android:text="@string/text_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>